@@ -1,7 +1,7 @@
 #!/bin/bash
 # Copyright 1999-2004 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo/src/catalyst/targets/livecd-stage1/Attic/livecd-stage1.sh,v 1.15 2005/01/11 14:10:19 wolf31o2 Exp $
+# $Header: /var/cvsroot/gentoo/src/catalyst/targets/livecd-stage1/Attic/livecd-stage1.sh,v 1.16 2005/01/28 18:37:23 wolf31o2 Exp $
 
 case $1 in
 	enter)
@@ -16,10 +16,9 @@ case $1 in
 	;;
 
 	preclean)
-		#killall -9 gconfd-2
-		#cp ${clst_sharedir}/targets/livecd-stage1/livecd-stage1-preclean-chroot.sh ${clst_chroot_path}/tmp
-		#${clst_CHROOT} ${clst_chroot_path} /tmp/livecd-stage1-preclean-chroot.sh || exit 1
-		#rm -f ${clst_chroot_path}/tmp/livecd-stage1-preclean-chroot.sh
+		cp ${clst_sharedir}/targets/livecd-stage1/livecd-stage1-preclean-chroot.sh ${clst_chroot_path}/tmp
+		${clst_CHROOT} ${clst_chroot_path} /tmp/livecd-stage1-preclean-chroot.sh || exit 1
+		rm -f ${clst_chroot_path}/tmp/livecd-stage1-preclean-chroot.sh
 		exit 0
 	;;
 
